@@ -1,3 +1,10 @@
+2010-05-12  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Data/CollectionViewTest_IEditable.cs:
+	  Refactor StandardCollectionView so that we only use the
+	  filtered list when we are grouping, filtering or sorting.
+	  Fixes more of 232 and the new moon-units.
+
 2010-05-11  Alan McGovern  <amcgovern@novell.com>
 
 	* System.Windows.Data/CollectionViewTest_IEditable.cs: Add
